@@ -2,11 +2,11 @@
 #name: label arithmetic with multiple same-name sections
 
 #...
+[ 	]*\[.*\][ 	]+foo[ 	]+GROUP.*
+#...
 [ 	]*\[.*\][ 	]+\.text[ 	]+PROGBITS.*
 #...
 [ 	]*\[.*\][ 	]+\.data[ 	]+PROGBITS.*
 #...
 [ 	]*\[.*\][ 	]+\.text[ 	]+PROGBITS.*
-#...
-[ 	]*\[.*\][ 	]+foo[ 	]+GROUP.*
 #pass
