@@ -1,3 +1,9 @@
+2004-11-24  Paul Brook  <paul@codesourcery.com>
+
+	* gas/elf/group0a.d: Adjust expected secion ordering.
+	* gas/elf/group1a.d: Ditto.
+	* gas/elf/section4.d: Ditto.
+
 2004-11-24  Nick Clifton  <nickc@redhat.com>
 
 	* gas/iq2000/allinsn.exp: Remove IQ10 tests.
